# GestureRecognition-Project

./: .gitignore  README.md  config.yml  main.py  pyproject.toml  requirements.txt  train_hmm.py
GestureRecognition/: __init__.py  demo.py  hmmclassifier.py  labeling.py  visualization.py
GestureRecognition/modules/: __init__.py  handdetector.py  hiddenmarkov.py  preprocessor.py  trailmarker.py
data/raw/A/: A_000.pickle  A_000L.pickle  A_000rr.pickle  A_001.pickle  A_001L.pickle  A_001rr.pickle  A_002.pickle  A_002L.pickle  A_002rr.pickle  A_003.pickle  A_003L.pickle  A_003rr.pickle  A_004.pickle  A_004L.pickle  A_004rr.pickle  A_005.pickle  A_005L.pickle  A_005rr.pickle  A_006.pickle  A_006L.pickle  A_006rr.pickle  A_007.pickle  A_007L.pickle  A_007rr.pickle  A_008.pickle  A_008L.pickle  A_008rr.pickle  A_009.pickle  A_009L.pickle  A_009rr.pickle  A_010.pickle  A_010L.pickle  A_011.pickle  A_011L.pickle  A_012.pickle  A_012L.pickle  A_013.pickle  A_013L.pickle  A_014.pickle  A_014L.pickle  (+10 more)
data/raw/B/: B_000L.pickle  B_000rr.pickle  B_001L.pickle  B_001rr.pickle  B_002L.pickle  B_002rr.pickle  B_003L.pickle  B_003rr.pickle  B_004L.pickle  B_004rr.pickle  B_005L.pickle  B_005rr.pickle  B_006L.pickle  B_006rr.pickle  B_007L.pickle  B_007rr.pickle  B_008L.pickle  B_008rr.pickle  B_009L.pickle  B_009rr.pickle  B_010L.pickle  B_011L.pickle  B_012L.pickle  (+7 more)
docs/source/: conf.py  handdetector.rst  hiddenmarkov.rst  hmmclassifier.rst  index.rst  intro.rst  labeling.rst  modules.rst  preprocessor.rst  pruefung.rst  signalhub.rst  trailmarker.rst  visualization.rst
(+901 files in other folders)
