[project]
name = "gesturerecognition"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hmmclassifier",
    "mediapipe>=0.10.32",
    "signalhub",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
signalhub = { git = "https://github.com/jaboll-ai/SignalHub.git", rev = "pyproject" }
hmmclassifier = { git = "https://github.com/jaboll-ai/hmmclassifier" }

[dependency-groups]
dev = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]